--- a/image.html
+++ b/image.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Image</title>
-        <style>
-            .header{
-                margin: 25px;
-                height: 250px;
-                outline: dashed 1px black;
-                position: relative;
-                text-align: right;
-            }
-            .links{
-                border: 1px solid grey;
-                padding: 10px;
-                margin: 10px;
-            }
-            .center {
-              margin: auto;
-              padding: 70px 0;
-              width: 90%;
-              height: 100px;
-              outline: dashed 1px black;
-              position: relative;
-              text-align: center;
-            }
-            .rounded{
-              border-radius: 25px;
-              border: 1px solid grey;
-              padding: 20px;
-              width: 500px;
-              height: 10px;
-              text-align: center;
-            }
-        </style>
-       <!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
+        <title>Image Search</title> 
+        <link rel="stylesheet" href="styles.css">
     </head>
+
     <body>
-        <div class="header">
-            <a class = "links" href="https://www.google.com/imghp">Images</a>
-            <a class = "links" href="https://www.google.com/advanced_search">Advanced search</a>
-        </div>
-        <div class="center">
-            <form  action="https://www.google.com/search">
-                <input class="rounded" type="text" name="q">
-                <input type="submit" value="Google Search">
+        <header class="page-header">
+          <div class="container">
+            <a href="index.html">Back</a>
+          </div>
+        </header>
+
+        <section class="search-form">
+            <form action="https://www.google.ru/images">
+                <input class="form" type="text" name="q"><br />
+                <input class="button" type="submit" value="Google Search">
             </form>
-        </div>
+        </section>
         
     </body>
 </html>
