--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
     <head>
         <title>Search</title> 
+        <link rel="stylesheet" href="styles.css">
     </head>
+
     <body>
-        <div class="links">
-            <a href="image.html">Images</a>
-            <a href="advanced.html">Advanced search</a>
-        </div>
-        
-        <div>
+        <header class="page-header">
+          <div class="container">
+            <a href="image.html">Image Search</a>
+            <a href="advanced.html">Advanced Search</a>
+          </div>
+        </header>
+
+        <section class="search-form">
             <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
+                <input class="form" type="text" name="q"><br />
+                <input class="button" type="submit" value="Google Search">
             </form>
-        </div>
+        </section>
         
     </body>
 </html>
