--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Search</title> 
@@ -6,19 +6,22 @@
     </head>
 
     <body>
-        <header class="page-header">
-          <div class="container">
+        <header>
+          <div class="page-header">
             <a href="image.html">Image Search</a>
             <a href="advanced.html">Advanced Search</a>
           </div>
         </header>
 
-        <section class="search-form">
-            <form action="https://www.google.com/search">
-                <input class="form" type="text" name="q"><br />
-                <input class="button" type="submit" value="Google Search">
-            </form>
-        </section>
+        <div class="container">
+            <!-- <section class="search-form"> -->
+                <form action="https://www.google.com/search">
+                    <input class="input" type="text" name="q">
+                    <input class="button" type="submit" value="Google Search">
+                </form>
+            <!-- </section> -->
+        </div>
+        
         
     </body>
 </html>
