Index and Image

--- a/image.html
+++ b/image.html
@@ -6,18 +6,22 @@
     </head>
 
     <body>
-        <header class="page-header">
-          <div class="container">
-            <a href="index.html">Back</a>
+
+        <header>
+          <div class="page-header">
+            <a href="index.html">Back to Search</a>
+            <a href="advanced.html">Advanced Search</a>
           </div>
         </header>
 
-        <section class="search-form">
+        <div class="container">
             <form action="https://www.google.ru/images">
-                <input class="form" type="text" name="q"><br />
-                <input class="button" type="submit" value="Google Search">
+                <div class="input-border">
+                    <input class="input" type="text" name="q">
+                </div>
+                <input class="button" type="submit" value="Image Search">
             </form>
-        </section>
+        </div>
         
     </body>
 </html>
