--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
         </header>
 
         <div class="container">
-            <!-- <section class="search-form"> -->
-                <form action="https://www.google.com/search">
+            <form action="https://www.google.com/search">
+                <div class="input-border">
                     <input class="input" type="text" name="q">
-                    <input class="button" type="submit" value="Google Search">
-                </form>
-            <!-- </section> -->
+                </div>
+                <input class="button" type="submit" value="Advanced Search">
+            </form>
         </div>
-        
         
     </body>
 </html>
