--- a/advanced.html
+++ b/advanced.html
@@ -6,27 +6,28 @@
     </head>
 
     <body>
-        <header class="page-header">
-          <div class="container">
-            <a href="index.html">Back</a>
+        <header>
+          <div class="page-header">
+            <a href="index.html">Back to Search</a>
+            <a href="image.html">Image Search</a>
           </div>
         </header>
 
-        <section class="advanced-search-form">
+        <div class="advanced">
             <h2>Find pages with...</h2>
             <form action="https://www.google.com/advanced_search">
-                <div class="label">со словами: </div>
+                <div class="label">all these words: </div>
                 <div class="input"><input type="text" name="q"></div>
-                <div class="label">со словосочетанием:</div>
+                <div class="label">this exact word or phrase:</div>
                 <div class="input"><input type="text" name="q"></div>
-                <div class="label">с любым из этих слов:</div>
+                <div class="label">any of these words:</div>
                 <div class="input"><input type="text" name="q"></div>
-                <div class="label">без слов:</div>
+                <div class="label">none of these words:</div>
                 <div class="input"><input type="text" name="q"></div>
                 <div class="empty"></div>
                 <div class="input"><input class="button-advanced" type="submit" value="Google Search"></div>
             </form>
-        </section>
+        </div>
         
     </body>
 </html>
