--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <div class="input-border">
                     <input class="input" type="text" name="q">
                 </div>
-                <input class="button" type="submit" value="Advanced Search">
+                <input class="button" type="submit" name="btnK" value="Google Search">
+                <input class="button" type="submit" name="btnI" value="I'm Feeling Lucky">
+
             </form>
         </div>
         
